84 - Немного изменил структуру страницы

--- a/app/pug/page_5_todo_task.pug
+++ b/app/pug/page_5_todo_task.pug
@@ -211,7 +211,7 @@ html
         .pg5-req-butt#pg5-req-butt-el-3
           p Почему это растение попало в набор?
       .pg5-p4-block
-        p В данном наборе <b>все</b> растения удовлетворяют критериям совместимости, а именно - один тип климата, и положительная либо нейтральная аллелопатия.
+        p В данном наборе все растения <i><b>не противоречат</b></i> критериям совместимости, а именно - один тип климата, и положительная либо нейтральная аллелопатия.
         p Для того, что бы узнать, согласно каким именно характеристикам, в набор было помещено конкретное растение - <u>нажмите на кнопку пояснения</u>, ниже карточки растения.
       .pg5-start-button.pg5-start-button-2#butt-restart
         span Пройти ещё раз
@@ -231,13 +231,10 @@ html
         span Растение с названием: 
         span 🪴
         span.pg-5-el-2#plant-name-expl-module <b>Название растения</b>
-      p Попало в набор, потому что имеет характеристики:
+      p Попало в набор, потому что выбранные пользователем характеристики, включаются в диапазон значений характеристик данного растения:
       .pg5-div-text-descr-charact
-        p Темпераура >20, Влажность <40, Освещение >30 < 40 ...
-      p А запрос на выборку растений по заданным характеристикам, выглядел следующим образом:
-      .pg5-div-text-descr-charact
-        p Температура 22 Влажность 10
-      p Из этого видно, что по значениям характеристик, растение попадает под заданную выборку, которую ввёл ползователь.
+        p 4 ∈ Выработка кислорода, 7 ∈ Занимаемая площадь, ...
+      //p Из этого видно, что по значениям характеристик, растение попадает под заданную выборку, которую ввёл ползователь.
 
     .h20
     .butt_back.n_but
@@ -245,6 +242,7 @@ html
 
   footer 
     .version 
-      p 2.0
-    p 
-      a(href = 'page_2.html') О проекте
+      p 2.0 Final - Апр 2024
+    //- p 
+    //-   a(href = 'page_2.html') О проекте
+    p.add-footer Спасибо, что тестируете наш сервис! ✨
