86 - Добавил конструктор пояснений

--- a/app/pug/page_5_todo_task.pug
+++ b/app/pug/page_5_todo_task.pug
@@ -112,10 +112,10 @@ html
         span.lab-pg5 Уход за растением 
         span.pg5-lvl2-line-down-2 (кол-во дней)
         .pg5-input-cont
-          input(type="range" min="1" max="10" value="0")
+          input(type="range" min="1" max="30" value="0")
           .pg5-input-hints
             span.pg5-lvl2-input-left-hint [1
-            span.pg5-lvl2-input-right-hint 10]
+            span.pg5-lvl2-input-right-hint 30]
         .pg5-block
           span Reset
       
@@ -233,7 +233,7 @@ html
         span.pg-5-el-2#plant-name-expl-module <b>Название растения</b>
       p Попало в набор, потому что выбранные пользователем характеристики, включаются в диапазон значений характеристик данного растения:
       .pg5-div-text-descr-charact
-        p 4 ∈ Выработка кислорода, 7 ∈ Занимаемая площадь, ...
+        p#p-result-answer 4 ∈ Выработка кислорода, 7 ∈ Занимаемая площадь, ...
       //p Из этого видно, что по значениям характеристик, растение попадает под заданную выборку, которую ввёл ползователь.
 
     .h20
