87 - Сделал конструктор для выбора типа климата

--- a/app/pug/page_5_todo_task.pug
+++ b/app/pug/page_5_todo_task.pug
@@ -168,9 +168,9 @@ html
       p.pg5-p1 Вот такие растения мы подобрали для вас:
       .pg5-lvl2-cont-1
         .pg5-lvl2-block
-          .pg5-lvl3-block1
+          .pg5-lvl3-block1.clim-block-main
             p <b>Тип климата:</b>
-            p.ital Субтропический
+            p.ital.clim-type-block Субтропический
           .pg5-lvl3-block2
             .pg5-lvl4-block1-img
               img(src="img/all-plants-photo/Растение Агапантус.jpg")
@@ -180,9 +180,9 @@ html
             p <b>Аллелопатия:</b>
             p.ital Нейтральная
         .pg5-lvl2-block
-          .pg5-lvl3-block1
+          .pg5-lvl3-block1.clim-block-main
             p <b>Тип климата:</b>
-            p.ital Субтропический
+            p.ital.clim-type-block Субтропический
           .pg5-lvl3-block2
             .pg5-lvl4-block1-img
               img(src="img/all-plants-photo/Растение Броваллия.jpg")
@@ -192,9 +192,9 @@ html
             p <b>Аллелопатия:</b>
             p.ital Нейтральная
         .pg5-lvl2-block
-          .pg5-lvl3-block1
+          .pg5-lvl3-block1.clim-block-main
             p <b>Тип климата:</b>
-            p.ital Субтропический
+            p.ital.clim-type-block Субтропический
           .pg5-lvl3-block2
             .pg5-lvl4-block1-img
               img(src="img/all-plants-photo/Растение Бугенвилия.jpg")
