--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -2650,7 +2650,14 @@ p.pg4-p1
 
 
 
+.color-block-yellow
+	background bg-yel
 
+.color-block-green
+	background rgb(111, 255, 0)
+
+.color-block-blue
+	background rgb(0, 200, 255)
 
 
 
