88 - Сделал конструктор для выбора Аллелопатии

--- a/app/pug/page_5_todo_task.pug
+++ b/app/pug/page_5_todo_task.pug
@@ -176,9 +176,9 @@ html
               img(src="img/all-plants-photo/Растение Агапантус.jpg")
             .pg5-lvl44-name-pl-2
               p.pg5-lvl4-name-pl Лаванда
-          .pg5-lvl3-block3
+          .pg5-lvl3-block3.allelop-block-main
             p <b>Аллелопатия:</b>
-            p.ital Нейтральная
+            p.ital.allelop-type-block Нейтральная
         .pg5-lvl2-block
           .pg5-lvl3-block1.clim-block-main
             p <b>Тип климата:</b>
@@ -188,9 +188,9 @@ html
               img(src="img/all-plants-photo/Растение Броваллия.jpg")
             .pg5-lvl44-name-pl-2
               p.pg5-lvl4-name-pl Броваллия
-          .pg5-lvl3-block3
+          .pg5-lvl3-block3.allelop-block-main
             p <b>Аллелопатия:</b>
-            p.ital Нейтральная
+            p.ital.allelop-type-block Нейтральная
         .pg5-lvl2-block
           .pg5-lvl3-block1.clim-block-main
             p <b>Тип климата:</b>
@@ -200,9 +200,9 @@ html
               img(src="img/all-plants-photo/Растение Бугенвилия.jpg")
             .pg5-lvl44-name-pl-2
               p.pg5-lvl4-name-pl Бугенвилия
-          .pg5-lvl3-block3
+          .pg5-lvl3-block3.allelop-block-main
             p <b>Аллелопатия:</b>
-            p.ital Нейтральная
+            p.ital.allelop-type-block Нейтральная
       .pg5-fack-block
         .pg5-req-butt#pg5-req-butt-el-1
           p Почему это растение попало в набор?
