89 - Сделал ограничение количества необходимых выбранных характеристик для показа результата

--- a/app/pug/page_5_todo_task.pug
+++ b/app/pug/page_5_todo_task.pug
@@ -221,7 +221,7 @@ html
       p.pg5-p1 Результаты:
       p К сожалению, мы не смогли подобрать для вас набор растений, по указанным вами характеристикам.
       p Пожалуйста, попробуйте ещё раз - выберете другие характеристики.
-      p.gr Если это сообщение появляется слишком часто, укажите значения для 1-2 характеристик, не больше. И помните, чем больше цветов растения вы выберете - тем больше будет результатов.
+      p.gr Если это сообщение появляется слишком часто, укажите значения для 1-2 характеристик, не больше
       .pg5-start-button.pg5-start-button-2#butt-restart
         span Попробовать ещё раз
 
