90 - Добавил запрос к БД растений, и отображение нужного названия и картинки на карточках

--- a/app/pug/page_5_todo_task.pug
+++ b/app/pug/page_5_todo_task.pug
@@ -173,9 +173,9 @@ html
             p.ital.clim-type-block Субтропический
           .pg5-lvl3-block2
             .pg5-lvl4-block1-img
-              img(src="img/all-plants-photo/Растение Агапантус.jpg")
+              img(src="img/all-plants-photo/Растение Агапантус.jpg")#plant-name-1-img
             .pg5-lvl44-name-pl-2
-              p.pg5-lvl4-name-pl Лаванда
+              p.pg5-lvl4-name-pl#plant-name-1 Лаванда
           .pg5-lvl3-block3.allelop-block-main
             p <b>Аллелопатия:</b>
             p.ital.allelop-type-block Нейтральная
@@ -185,9 +185,9 @@ html
             p.ital.clim-type-block Субтропический
           .pg5-lvl3-block2
             .pg5-lvl4-block1-img
-              img(src="img/all-plants-photo/Растение Броваллия.jpg")
+              img(src="img/all-plants-photo/Растение Броваллия.jpg")#plant-name-2-img
             .pg5-lvl44-name-pl-2
-              p.pg5-lvl4-name-pl Броваллия
+              p.pg5-lvl4-name-pl#plant-name-2 Броваллия
           .pg5-lvl3-block3.allelop-block-main
             p <b>Аллелопатия:</b>
             p.ital.allelop-type-block Нейтральная
@@ -197,9 +197,9 @@ html
             p.ital.clim-type-block Субтропический
           .pg5-lvl3-block2
             .pg5-lvl4-block1-img
-              img(src="img/all-plants-photo/Растение Бугенвилия.jpg")
+              img(src="img/all-plants-photo/Растение Бугенвилия.jpg")#plant-name-3-img
             .pg5-lvl44-name-pl-2
-              p.pg5-lvl4-name-pl Бугенвилия
+              p.pg5-lvl4-name-pl#plant-name-3 Бугенвилия
           .pg5-lvl3-block3.allelop-block-main
             p <b>Аллелопатия:</b>
             p.ital.allelop-type-block Нейтральная
